--- a/portfolio_analyst_students.ipynb
+++ b/portfolio_analyst_students.ipynb
@@ -369,23 +369,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_prices_return_2['date'] = pd.to_datetime(df_prices_return_2['date'])\n",
     "df_prices_return_2.set_index('date', inplace=True)\n",
     "\n",
-    "# Calcular rendimientos diarios para todos los activos\n",
-    "daily_returns = df_prices_return_2.pct_change() * 100  \n",
+    "daily_returns = df_prices_return_2.pct_change() * 100  # Calcular rendimientos diarios para todos los asset\n",
     "\n",
-    "# Renombrar las columnas de rendimientos\n",
     "daily_returns.columns = [f'{col}_Daily_Return' for col in daily_returns.columns]\n",
     "\n",
-    "# Unir los rendimientos al DataFrame original\n",
     "df_prices_return_2 = pd.concat([df_prices_return_2, daily_returns], axis=1)\n",
     "\n",
-    "# Mostrar el DataFrame final\n",
     "df_prices_return_2 = df_prices_return_2.reset_index()"
    ]
   },
@@ -1090,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1100,7 @@
    "source": [
     "daily_volatility = df_returns['Portfolio'].std()\n",
     "\n",
-    "# Anualizar la volatilidad (multiplicamos por la raíz cuadrada de 252)\n",
+    "# (multiplicamos por la raíz cuadrada de 252)\n",
     "annualized_volatility = daily_volatility * np.sqrt(252)\n",
     "\n",
     "print(f\"Volatilidad anualizada: {annualized_volatility:.2%}\")"
